--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,14 +23,14 @@ espresso-runner = "1.5.2"
 firebaseBom = "32.2.3"
 glance = "1.0.0"
 glance-tools = "0.2.2"
-gradlePlugins-agp = "8.13.0"
+gradlePlugins-agp = "8.13.1"
 gradlePlugins-crashlytics = "3.0.6"
 gradlePlugins-detekt = "1.23.8"
 gradlePlugins-gms = "4.4.4"
 gradlePlugins-hilt = "2.57.2"
-gradlePlugins-kotlinter = "5.2.0"
-gradlePlugins-kotlinxSerialization = "1.8.21"
-gradlePlugins-ksp = "2.1.21-2.0.2"
+gradlePlugins-kotlinter = "5.3.0"
+gradlePlugins-kotlinxSerialization = "2.2.21"
+gradlePlugins-ksp = "2.3.3"
 gradlePlugins-licensee = "1.14.1"
 gradlePlugins-protobuf = "0.9.5"
 gradlePlugins-shot = "5.14.1"
@@ -39,7 +39,7 @@ gradlePlugins-versionsBenManes = "0.53.0"
 hilt = "1.3.0"
 hiltNavigationCompose = "1.3.0"
 junit = "4.13.2"
-kotlin = "2.1.21"
+kotlin = "2.2.21"
 kotlinxCoroutinesTest = "1.7.1"
 kotlinxSerialization = "1.5.0"
 lifecycle = "2.9.4"
@@ -66,8 +66,8 @@ androidx-compose-ui-uiTooling = { module = "androidx.compose.ui:ui-tooling", ver
 androidx-compose-ui-uiTooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
-androidx-glance = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
 androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "androidxFragment" }
+androidx-glance = { module = "androidx.glance:glance-appwidget", version.ref = "glance" }
 androidx-hilt-hiltCommon = { module = "androidx.hilt:hilt-common", version.ref = "hilt" }
 androidx-hilt-hiltCompiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt" }
 androidx-hilt-hiltNavigationCompose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
@@ -77,7 +77,6 @@ androidx-navigation-navigationCompose = { module = "androidx.navigation:navigati
 androidx-room-roomCompiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-roomKtx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-roomRuntime = { module = "androidx.room:room-runtime", version.ref = "room" }
-androidx-tracing = { module = "androidx.tracing:tracing", version = "1.1.0" }
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidxTest" }
 androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
 androidx-test-espresso-device = { module = "androidx.test.espresso:espresso-device", version.ref = "espresso-device" }
@@ -87,6 +86,7 @@ androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidxT
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "espresso-runner" }
 androidx-test-services = { module = "androidx.test.services:test-services", version.ref = "androidxTestServices" }
 androidx-test-uiAutomator = { module = "androidx.test.uiautomator:uiautomator", version.ref = "uiAutomator" }
+androidx-tracing = "androidx.tracing:tracing:1.1.0"
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "assertk" }
 coilKt-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
@@ -95,14 +95,14 @@ google-accompanistFlowLayout = { module = "com.google.accompanist:accompanist-fl
 google-accompanistNavAnimations = { module = "com.google.accompanist:accompanist-navigation-animation", version.ref = "accompanist" }
 google-accompanistNavMaterial = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
 google-accompanistPermissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
-google-accompanistTestHarness = { module = "com.google.accompanist:accompanist-testharness", version.ref = "accompanist" }
 google-accompanistSystemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
+google-accompanistTestHarness = { module = "com.google.accompanist:accompanist-testharness", version.ref = "accompanist" }
+google-android-glanceTools-host = { module = "com.google.android.glance.tools:appwidget-host", version.ref = "glance-tools" }
+google-android-glanceTools-viewer = { module = "com.google.android.glance.tools:appwidget-viewer", version.ref = "glance-tools" }
 google-dagger-dagger = { module = "com.google.dagger:dagger", version.ref = "daggerHilt" }
 google-dagger-daggerCompiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerHilt" }
 google-dagger-hiltAndroid = { module = "com.google.dagger:hilt-android", version.ref = "daggerHilt" }
 google-dagger-hiltCompiler = { module = "com.google.dagger:hilt-compiler", version.ref = "daggerHilt" }
-google-android-glanceTools-host = { module = "com.google.android.glance.tools:appwidget-host", version.ref = "glance-tools" }
-google-android-glanceTools-viewer = { module = "com.google.android.glance.tools:appwidget-viewer", version.ref = "glance-tools" }
 google-firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
@@ -138,7 +138,6 @@ composeTest = [
     "androidx-compose-ui-uiTest-manifest",
     "androidx-test-core",
     "androidx-test-espresso-core",
-    "androidx.test-ext-junit",
     "androidx-test-rules",
 ]
 composeUiTooling = [
@@ -173,17 +172,17 @@ room = [
 ]
 
 [plugins]
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-application = { id = "com.android.application", version.ref = "gradlePlugins-agp" }
 android-library = { id = "com.android.library", version.ref = "gradlePlugins-agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "gradlePlugins-crashlytics" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "gradlePlugins-detekt" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "gradlePlugins-gms" }
 hilt = { id = "dagger.hilt.android.plugin", version.ref = "gradlePlugins-hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "gradlePlugins-kotlinxSerialization" }
 kotlinter = { id = "org.jmailen.kotlinter", version.ref = "gradlePlugins-kotlinter" }
+kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "gradlePlugins-kotlinxSerialization" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "gradlePlugins-ksp" }
 licensee = { id = "app.cash.licensee", version.ref = "gradlePlugins-licensee" }
 protobuf = { id = "com.google.protobuf", version.ref = "gradlePlugins-protobuf" }
